--- a/chante.html
+++ b/chante.html
@@ -10,25 +10,26 @@
     </head>
 
     <body class="chante">
-        <a href="file:///C:/Users/selim/Desktop/html-mini-projekt/papatya/linkOne.html">
+        <a href="./linkOne.html">
             <img src="nene.jpeg" class="Bilder"
             style="width: 250px;height: 400px;">
         </a>
 
-        <a href="file:///C:/Users/selim/Desktop/html-mini-projekt/papatya/linkTwo.html">
+        <a href="./linkTwo.html">
             <img src="spider.jpeg" class="Bilder"
             style="width: 250px;height: 400px;">
         </a>
 
-        <a href="file:///C:/Users/selim/Desktop/html-mini-projekt/papatya/linkThree.html">
+        <a href="./linkThree.html">
             <img src="dede.jpg" class="Bilder"
             style="width: 250px;height: 400px;">
         </a>
 
-        <a href="file:///C:/Users/selim/Desktop/html-mini-projekt/papatya/linkFour.html">
+        <a href="./linkFour.html">
             <img src="walk.jpg" class="Bilder"
             style="width: 250px;height: 400px;">
         </a>
     </body>
+
 
 </html>
