--- a/chante.html
+++ b/chante.html
@@ -10,26 +10,31 @@
     </head>
 
     <body class="chante">
-        <a href="./linkOne.html">
+        <a href="file:///C:/Users/selim/Desktop/html-mini-projekt/papatya/linkOne.html">
             <img src="nene.jpeg" class="Bilder"
             style="width: 250px;height: 400px;">
         </a>
 
-        <a href="./linkTwo.html">
+        <a href="file:///C:/Users/selim/Desktop/html-mini-projekt/papatya/linkTwo.html">
             <img src="spider.jpeg" class="Bilder"
             style="width: 250px;height: 400px;">
         </a>
 
-        <a href="./linkThree.html">
+        <a href="file:///C:/Users/selim/Desktop/html-mini-projekt/papatya/linkThree.html">
             <img src="dede.jpg" class="Bilder"
             style="width: 250px;height: 400px;">
         </a>
 
-        <a href="./linkFour.html">
+        <a href="file:///C:/Users/selim/Desktop/html-mini-projekt/papatya/linkFour.html">
             <img src="walk.jpg" class="Bilder"
             style="width: 250px;height: 400px;">
         </a>
-    </body>
 
+        <a href="file:///C:/Users/selim/Desktop/html-mini-projekt/papatya/linkFive.html">
+            <img src="blumen.JPG" class="Bilder"
+            style="width: 250px;height: 400 px;">
+        </a>
+
+    </body>
 
 </html>
