--- a/linkFive.html
+++ b/linkFive.html
@@ -20,13 +20,12 @@
 
         <div class="btn-container">
             <div class="btn-center">
-            <a href ="./linkOne.html" class="btn"> Alles Gute</a>
-            <a href ="./linkTwo.html" class="btn"> Meine Gwen</a>
-            <a href ="./linkThree.html" class="btn"> Der erste Blick </a>
-            <a href ="./linkFour.html" class="btn"> Du bist mein! </a>
+            <a href ="file:///C:/Users/selim/Desktop/html-mini-projekt/papatya/linkOne.html" class="btn"> Alles Gute</a>
+            <a href ="file:///C:/Users/selim/Desktop/html-mini-projekt/papatya/linkTwo.html" class="btn"> Meine Gwen</a>
+            <a href ="file:///C:/Users/selim/Desktop/html-mini-projekt/papatya/linkThree.html" class="btn"> Der erste Blick </a>
+            <a href ="file:///C:/Users/selim/Desktop/html-mini-projekt/papatya/linkFour.html" class="btn"> Du bist mein! </a>
             </div>
         </div>
 
     </body>
-
 </html>
