--- a/linkThree.html
+++ b/linkThree.html
@@ -39,13 +39,12 @@
 
         <div class="btn-container">
             <div class="btn-center">
-            <a href ="./linkOne.html" class="btn"> Alles Gute</a>
-            <a href ="./linkTwo.html" class="btn"> Meine Gwen</a>
-            <a href ="./linkFour.html" class="btn"> Du bist mein!</a>
-            <a href ="./linkFive.html" class="btn"> Video </a>
+            <a href ="file:///C:/Users/selim/Desktop/html-mini-projekt/papatya/linkOne.html" class="btn"> Alles Gute</a>
+            <a href ="file:///C:/Users/selim/Desktop/html-mini-projekt/papatya/linkTwo.html" class="btn"> Meine Gwen</a>
+            <a href ="file:///C:/Users/selim/Desktop/html-mini-projekt/papatya/linkFour.html" class="btn"> Du bist mein!</a>
+            <a href ="file:///C:/Users/selim/Desktop/html-mini-projekt/papatya/linkFive.html" class="btn"> Video </a>
             </div>
         </div>
 
     </body>
-
 </html>
