--- a/chante.html
+++ b/chante.html
@@ -10,27 +10,27 @@
     </head>
 
     <body class="chante">
-        <a href="file:///C:/Users/selim/Desktop/html-mini-projekt/papatya/linkOne.html">
+        <a href="https://selim-oez.github.io/Papatyam.github.io/linkOne.html">
             <img src="nene.jpeg" class="Bilder"
             style="width: 250px;height: 400px;">
         </a>
 
-        <a href="file:///C:/Users/selim/Desktop/html-mini-projekt/papatya/linkTwo.html">
+        <a href="https://selim-oez.github.io/Papatyam.github.io/linkTwo.html">
             <img src="spider.jpeg" class="Bilder"
             style="width: 250px;height: 400px;">
         </a>
 
-        <a href="file:///C:/Users/selim/Desktop/html-mini-projekt/papatya/linkThree.html">
+        <a href="https://selim-oez.github.io/Papatyam.github.io/linkThree.html">
             <img src="dede.jpg" class="Bilder"
             style="width: 250px;height: 400px;">
         </a>
 
-        <a href="file:///C:/Users/selim/Desktop/html-mini-projekt/papatya/linkFour.html">
+        <a href="https://selim-oez.github.io/Papatyam.github.io/linkFour.html">
             <img src="walk.jpg" class="Bilder"
             style="width: 250px;height: 400px;">
         </a>
 
-        <a href="file:///C:/Users/selim/Desktop/html-mini-projekt/papatya/linkFive.html">
+        <a href="https://selim-oez.github.io/Papatyam.github.io/linkFive.html">
             <img src="blumen.JPG" class="Bilder"
             style="width: 250px;height: 400 px;">
         </a>
