--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
 
     <body class="start">
-        <a href="file:///C:/Users/selim/Desktop/html-mini-projekt/papatya/chante.html">
+        <a href="https://selim-oez.github.io/Papatyam.github.io/chante.html">
                 
             <div class="container">                    
                 <div class="center">
