--- a/linkFour.html
+++ b/linkFour.html
@@ -53,10 +53,10 @@
 
         <div class="btn-container">
             <div class="btn-center">
-            <a href ="file:///C:/Users/selim/Desktop/html-mini-projekt/papatya/linkOne.html" class="btn"> Alles Gute</a>
-            <a href ="file:///C:/Users/selim/Desktop/html-mini-projekt/papatya/linkTwo.html" class="btn"> Meine Gwen</a>
-            <a href ="file:///C:/Users/selim/Desktop/html-mini-projekt/papatya/linkThree.html" class="btn"> Der erste Blick </a>
-            <a href ="file:///C:/Users/selim/Desktop/html-mini-projekt/papatya/linkFive.html" class="btn"> Video </a>
+            <a href ="https://selim-oez.github.io/Papatyam.github.io/linkOne.html" class="btn"> Alles Gute</a>
+            <a href ="https://selim-oez.github.io/Papatyam.github.io/linkTwo.html" class="btn"> Meine Gwen</a>
+            <a href ="https://selim-oez.github.io/Papatyam.github.io/linkThree.html" class="btn"> Der erste Blick </a>
+            <a href ="https://selim-oez.github.io/Papatyam.github.io/linkFive.html" class="btn"> Video </a>
             </div>
         </div>
 
