--- a/linkTwo.html
+++ b/linkTwo.html
@@ -39,10 +39,10 @@
 
         <div class="btn-container">
             <div class="btn-center">
-            <a href ="file:///C:/Users/selim/Desktop/html-mini-projekt/papatya/linkOne.html" class="btn"> Alles Gute</a>
-            <a href ="file:///C:/Users/selim/Desktop/html-mini-projekt/papatya/linkThree.html" class="btn"> Der erste Blick </a>
-            <a href ="file:///C:/Users/selim/Desktop/html-mini-projekt/papatya/linkFour.html" class="btn"> Du bist mein! </a>
-            <a href ="file:///C:/Users/selim/Desktop/html-mini-projekt/papatya/linkFive.html" class="btn"> Video</a>
+            <a href ="https://selim-oez.github.io/Papatyam.github.io/linkOne.html" class="btn"> Alles Gute</a>
+            <a href ="https://selim-oez.github.io/Papatyam.github.io/linkThree.html" class="btn"> Der erste Blick </a>
+            <a href ="https://selim-oez.github.io/Papatyam.github.io/linkFour.html" class="btn"> Du bist mein! </a>
+            <a href ="https://selim-oez.github.io/Papatyam.github.io/linkFive.html" class="btn"> Video</a>
             </div>
         </div>
     </body>
