--- a/linkTwo.html
+++ b/linkTwo.html
@@ -41,7 +41,7 @@
             <div class="btn-center">
             <a href ="https://selim-oez.github.io/Papatyam.github.io/linkOne.html" class="btn"> Alles Gute</a>
             <a href ="https://selim-oez.github.io/Papatyam.github.io/linkThree.html" class="btn"> Der erste Blick </a>
-            <a href ="https://selim-oez.github.io/Papatyam.github.io/linkFour.html" class="btn"> Du bist mein! </a>
+            <a href ="https://selim-oez.github.io/Papatyam.github.io/linkFour.html" class="btn"> Mein Engel</a>
             <a href ="https://selim-oez.github.io/Papatyam.github.io/linkFive.html" class="btn"> Video</a>
             </div>
         </div>
