--- a/linkSix.html
+++ b/linkSix.html
@@ -9,7 +9,7 @@
         <h1 class="headline">Flaws</h1>
     </head>
 
-    <body class="linkFour">
+    <body class="linkSix">
         <div class="center-wrapper">
             <div class="textbox">
                 <h2>Flaws</h2>
