--- a/linkSix.html
+++ b/linkSix.html
@@ -5,30 +5,30 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="styles.css">
-        <title>Flaws</title>
-        <h1 class="headline">Flaws</h1>
+        <title>Glück und Lebensfreude</title>
+        <h1 class="headline">Glück und Lebensfreude</h1>
     </head>
 
     <body class="linkSix">
         <div class="center-wrapper">
             <div class="textbox">
-                <h2>Flaws</h2>
+                <h2>Glück und Lebensfreude</h2>
 
                 Ich bin mir sicher, dass du die Person bist <br>
                 deren Fehler ich mein Leben lang akzeptieren  <br>
                 und verbessern möchte. <br>
                 Denn du bist ein guter Mensch,<br>
-                ein Mensch wie ich ihn noch nie so gesehen habe.<br>
+                ein Mensch den ich so noch nie gesehen habe.<br>
                 Voller Leid, voller Enttäuschung und voller Schmerz. <br>
-                Aber sich trotzdem voller Freude,<br>
-                immer lachend und mit einer Stärke durch das Leben kämpft <br>
+                Aber trotzdem voller Freude,<br>
+                sich immer lachend und mit einer Stärke durch das Leben kämpft <br>
                 In einer Lage in der die Mehrheit wahrscheinlich bereits aufgegeben hätte. <br>
                 Du bist wahrlich ein gefallener Engel. <br>
                 Ein Engel dessen Flügel immer wieder gebrochen wurden. <br>
                 Jetzt ist aber Zeit zu heilen und zu glänzen wie noch nie zuvor. <br> <br>
                 
                 Du musstest lang genug Stark sein,<br>
-                 jetzt bin ich da um dir die Last abzunehmen, <br>
+                jetzt bin ich da um dir die Last abzunehmen, <br>
                 damit du wieder fliegen kannst.<br>
                 Damit der Engel wieder das sein kann was es sehr lange nicht mehr war: <br>
                 Glücklich und voller Lebensfreude. <br><br>
