--- a/linkFive.html
+++ b/linkFive.html
@@ -4,6 +4,10 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <style> video {
+    width: 600px;   /* beliebige Größe */
+    border-radius: 10px; /* optionales Design */
+  }</style>
         <link rel="stylesheet" href="styles.css">
         <title>Video</title>
         <h1 class="headline"> Video </h1>
@@ -12,9 +16,7 @@
     <body  class="linkFive">
         <div class="center-wrapper">
             <div class="textbox">
-                <video>
-                    <source src="danke.mp4" type="video/mp4">
-                </video>       
+                <video src="danke.mp4" autoplay muted loop playsinline</video>       
             </div>
         </div>    
 
