--- a/linkFive.html
+++ b/linkFive.html
@@ -5,9 +5,9 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <style> video {
-    width: 600px;   /* beliebige Größe */
-    border-radius: 10px; /* optionales Design */
-  }</style>
+            width: 600px;   /* beliebige Größe */
+            border-radius: 10px; /* optionales Design */}
+        </style>
         <link rel="stylesheet" href="styles.css">
         <title>Video</title>
         <h1 class="headline"> Video </h1>
@@ -16,7 +16,7 @@
     <body  class="linkFive">
         <div class="center-wrapper">
             <div class="textbox">
-                <video src="danke.mp4" autoplay muted loop playsinline</video>       
+                <video src="danke.mp4" autoplay></video>       
             </div>
         </div>    
 
