--- a/linkFive.html
+++ b/linkFive.html
@@ -15,7 +15,7 @@
 
     <body  class="linkFive">
         <div class="center-wrapper">
-            <div class="textbox">
+            <div class = "video">
                 <video src="danke.mp4" autoplay></video>       
             </div>
         </div>    
