--- a/linkFive.html
+++ b/linkFive.html
@@ -16,7 +16,9 @@
     <body  class="linkFive">
         <div class="center-wrapper">
             <div class = "video">
-                <video src="danke.mp4" autoplay></video>       
+                <video >
+                    <source src="danke.mp4" typw="video/mp4">
+                </video>       
             </div>
         </div>    
 
