--- a/chante.html
+++ b/chante.html
@@ -35,6 +35,12 @@
             style="width: 250px;height: 400 px;">
         </a>
 
+        <a href="https://selim-oez.github.io/Papatyam.github.io/contact.html">
+            <img src="contact.jpg" class="Bilder"
+            style="width: 250px;height: 400px">
+        </a>
+        
+
     </body>
 
 </html>
