--- a/contact.html
+++ b/contact.html
@@ -22,14 +22,18 @@
                 ich versuche mich abzulenken, falle aber immer wieder in die Erinnerungen <br>
                 sei es die schneeballschlacht am Ende <br>
                 oder das erste Treffen <br>
-                oder die Knallerbenschlacht <br>
+                oder die Knallerbsenschlacht <br>
                 oder die abfucks in München <br>
                 oder das erste mal als sich unsere Hände berührt haben. <br>
+                Jeden Abend spielen sich alle Erinnerungen auf Dauerschleife ab <br> <br>
                 Dein Blick, dein Weinen, sogar deine launische Art <br>
                 Ich vermisse alles, egal ob gut oder schlecht ich will es haben <br>
                 Ich will meine kleine Papatya wieder <br>
-                Ich liebe dich und ja ich weiß keine Kontakt, aber ich kann nicht anders <br>
-                ich crave jedes kleine bisschen von dir.
+                Ich liebe dich und ja ich weiß kein Kontakt, aber ich kann nicht anders <br>
+                als dich zu vermissen und ich weiß du vermisst genauso <br>
+                neu und diesmal richtig mit dem was wir aus den Fehlern gelernt haben. <br>
+                Ich liebe dich und werde auf dich warten, ich weiß du gehörst zu mir <br>
+                alles andere kann ich nicht zulassen, egal wie gesund oder ungesund es ist.<br>
              </div>
         </div>
 
